# ProjetoNavaIA

./: CMakeLists.txt  main.cpp
